# cozodb

./: .dockerignore  .gitignore  CHANGELOG.md  Cross.toml  Makefile  README.md  rebar.config
.cross/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.aarch64-unknown-linux-musl  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.x86_64-unknown-linux-musl
.github/workflows/: build-cross-images.yml  release.yml
benchmark/: Dockerfile  docker-compose.yml  docker-test.sh  memory_profile.escript
benchmark/cozodb_benchmark/: .gitignore  README.md  mix.exs  run_benchmark.sh
benchmark/cozodb_benchmark/lib/: benchmark_runner.exs  cozodb_benchmark.ex
benchmark/cozodb_benchmark/lib/cozodb_benchmark/: application.ex
benchmark/cozodb_benchmark/test/: cozodb_benchmark_test.exs
config/: vm.args
native/cozodb/: Cargo.toml  Cross.toml
native/cozodb/src/: lib.rs
src/: cargo.hrl  cozodb.app.src  cozodb.erl  cozodb_app.erl  cozodb_callback_monitor.erl  cozodb_migration.erl  cozodb_migrator.erl  cozodb_migrator_history.erl  cozodb_migrator_runner.erl  cozodb_migrator_server.erl  cozodb_migrator_utils.erl  cozodb_nif_loader.erl  cozodb_script_utils.erl  cozodb_sup.erl
test/: cozodb_SUITE.erl  cozodb_benchmark_SUITE.erl  cozodb_error_handling_SUITE.erl  cozodb_migrator_SUITE.erl  cozoscript_functions_SUITE.erl
test/migrations/: cozodb_migration_20260101000000_create_users.erl  cozodb_migration_20260102000000_create_posts.erl  cozodb_migration_20260103000000_add_posts_index.erl  cozodb_migration_20260104000000_add_user_age.erl  cozodb_migration_20260105000000_with_backup.erl  cozodb_migration_20260106000000_failing.erl
