[package]
name = "erlang-cozodb"
description = "Erlang NIF wrapper for CozoDB using Rustler."
authors = ["Alejandro M. Ramallo"]
version = "0.3.5"
edition = "2021"

[lib]
name = "cozodb"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = {version = "=0.37.0", features = ["nif_version_2_17"]}
# Using local path temporarily to test new memory stats functionality
cozo = {git = "https://github.com/aramallo/cozo.git", tag = "v0.8.5-leapsight" }
uuid = "1.3.3"
threadpool = "1.8.1"
once_cell = "1.21.3"
num_cpus = "1.17.0"

# Memory allocator - jemalloc (optional, controlled by feature flag)
# Only compile on non-MSVC platforms when jemalloc feature is enabled
# Note: disable-initial-exec-tls is required for Docker/dlopen() compatibility
# to avoid "cannot allocate memory in static TLS block" errors
# ==============================================================================
# Pin the following to match cozo's working version
# ==============================================================================
graph = "=0.3.1"  # uses graph_builder 0.4.0
graph_builder = "=0.4.0"  # uses rayon 1.10.0
rayon = "=1.10.0"
ndarray = "0.15.6"
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
serde_derive = "1.0.199"
lazy_static = "1.4.0"
crossbeam = "0.8.4"

# Memory allocator - jemalloc (optional, controlled by feature flag)
# Only compile on non-MSVC platforms when jemalloc feature is enabled
# Note: disable-initial-exec-tls is required for Docker/dlopen() compatibility
# to avoid "cannot allocate memory in static TLS block" errors
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["stats", "disable_initial_exec_tls"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }
tikv-jemalloc-sys = { version = "0.6", features = ["stats", "disable_initial_exec_tls"], optional = true }

[features]
default = [
    "cozo/storage-sqlite",
    "cozo/storage-rocksdb",
    "cozo/graph-algo",
    "jemalloc"  # jemalloc with 0ms decay: best throughput + low memory retention
]

# Windows default - same as default but without jemalloc (not available on Windows/MSVC)
windows-default = [
    "cozo/storage-sqlite",
    "cozo/storage-rocksdb",
    "cozo/graph-algo",
]

# IMPORTANT: storage-rocksdb (cozorocks) and storage-new-rocksdb (rust-rocksdb) are
# MUTUALLY EXCLUSIVE. Both link to RocksDB with different allocator configurations,
# causing "pointer being freed was not allocated" crashes when used together.
#
# Use ONE of these configurations:
#
# 1. Default (cozorocks): --features "default"
#    - Uses cozorocks C++ FFI bridge
#    - Configured via RocksDB OPTIONS file
#
# 2. New RocksDB (rust-rocksdb): --no-default-features --features "new-rocksdb-default"
#    - Uses official rust-rocksdb crate
#    - Configured via COZO_ROCKSDB_* environment variables

# New RocksDB backend with all standard features (REPLACES default, not additive)
new-rocksdb-default = [
    "cozo/storage-sqlite",
    "cozo/storage-new-rocksdb",
    "cozo/graph-algo",
    "jemalloc"
]

# Just the new-rocksdb feature alone (for combining with other features manually)
new-rocksdb = ["cozo/storage-new-rocksdb"]

# Use Erlang's allocator (EnifAllocator from rustler 0.37+) for Rust allocations.
# This allows:
# 1. Rust NIF allocations are tracked by the BEAM
# 2. Memory is returned more predictably when Erlang GCs
# 3. Better integration with Erlang's memory management
#
# RocksDB (C++) still uses its own memory management, but jemalloc is optional.
nif_alloc = []

# Use jemalloc as the global allocator for the entire process.
# This enables:
# 1. Rust NIF allocations go through jemalloc (via #[global_allocator])
# 2. RocksDB C++ allocations also use jemalloc (via cozo/rocksdb-jemalloc feature)
# 3. Unified memory statistics and purge capabilities
#
# Note: When both nif_alloc and jemalloc are enabled, nif_alloc takes precedence
# and jemalloc is only used for RocksDB (C++).
#
# For pure jemalloc mode: --no-default-features --features "cozo/storage-sqlite,cozo/storage-rocksdb,cozo/graph-algo,jemalloc"
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl", "tikv-jemalloc-sys", "cozo/rocksdb-jemalloc"]

# Hybrid mode: Erlang allocator for Rust + jemalloc for RocksDB
# This gives best of both worlds: BEAM-tracked Rust memory + jemalloc stats for RocksDB
nif_alloc_rocksdb_jemalloc = ["nif_alloc", "tikv-jemalloc-ctl", "tikv-jemalloc-sys", "cozo/rocksdb-jemalloc"]

# Enable jemalloc heap profiling support (dump_heap_profile/1).
# This adds platform-specific stack unwinding (libunwind on aarch64) which can
# cause issues in some container environments. Only enable if you need heap profiling.
# Requires: MALLOC_CONF="prof:true" at runtime to activate.
jemalloc-profiling = ["tikv-jemallocator/profiling", "tikv-jemalloc-ctl/profiling", "tikv-jemalloc-sys/profiling"]

# Enable Linux io_uring for RocksDB async I/O (Linux-only, requires liburing-dev).
# Disabled by default due to crashes when combined with jemalloc on RocksDB 10.9.1
# in container environments (Docker named volumes, AWS ECS).
# The issue is a three-way interaction between RocksDB 10.9.1's per-thread
# io_uring instances (ThreadLocalPtr/pthread TLS), jemalloc's TLS-based thread
# caches, and the BEAM VM's many dirty IO scheduler threads.
# RocksDB falls back to standard pread/pwrite which performs well.
# Enable via: COZODB_IO_URING=true make build
io-uring = ["cozo/io-uring"]
